# obsidian-ai-agent

./: AGENT-EDITABLE.md  AGENTS.md  PROJECT-OVERVIEW.md  README.md  index.html  package.json  progress.txt  project.yaml  vite.config.ts  vitest.config.ts
scripts/: README.md  build-junction.bat  build-web.bat  dev-junction.bat  init-env.bat  print-cwd-realpath.mjs  setup-mingw-manual.bat  tauri-build-junction-package.bat  tauri-build.bat  tauri-cargo-build.bat  tauri-cargo-dev.bat  tauri-dev.bat  tauri-start-junction-dev.bat  verify-env-manual.bat
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  lib.rs  models.rs
src-tauri/src/db/: migrations.rs  repository.rs
src-tauri/src/gemini/: mod.rs
src-tauri/src/ingestion/: mod.rs
src-tauri/src/obsidian/: mod.rs
src-tauri/src/prompts/: extract_audio.md  extract_image.md  extract_video.md  note_format.md  synthesis.md  system.md
src-tauri/src/secrets/: mod.rs
src-tauri/windows/: hooks.nsh
src/app/: dashboard-shell.tsx
src/features/ingestion/: ingestion-queue.tsx
src/features/jobs/: insight-grid.tsx
src/features/notes/: note-preview.tsx
src/features/settings/: settings-panel.tsx
src/lib/: mock-data.ts  tauri-client.ts  tauri-contracts.ts  types.ts
src/test/: app.test.tsx
